--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     networks:
       - proxy-tier
     environment:
-      VIRTUAL_HOST: "www.adolfo-peixinho.eu.org,adolfo-peixinho.eu.org"
+      VIRTUAL_HOST: "adolfo-peixinho.eu.org"
       VIRTUAL_NETWORK: "caddy-proxy"
       VIRTUAL_PORT: 80
     restart: always
