--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,4 @@
-version: "2"
-
-networks:
-  proxy-tier:
-    external:
-      name: caddy-proxy
+version: '3'
 
 services:
   app1:
@@ -12,7 +7,17 @@ services:
     networks:
       - proxy-tier
     environment:
-      VIRTUAL_HOST: "adolfo-peixinho.eu.org"
-      VIRTUAL_NETWORK: "caddy-proxy"
-      VIRTUAL_PORT: 80
+      VIRTUAL_HOST: adolfo-peixinho.eu.org, www.adolfo-peixinho.eu.org
+      VIRTUAL_PROTO: https
     restart: always
+
+networks:
+  proxy-tier:
+    external:
+
+# environment:
+#   VIRTUAL_HOST: domain.com, www.domain.com
+#   VIRTUAL_PROTO: https
+  # VIRTUAL_PORT: 443
+  # LETSENCRYPT_HOST: domain.com, www.domain.com
+  # LETSENCRYPT_EMAIL: your_email@domain.com    
