--- a/app3/dockerfile
+++ b/app3/dockerfile
@@ -1,4 +1,4 @@
-FROM mhart/alpine-node
+FROM node:8-alpine
 
 RUN addgroup -S app && adduser -S -g app app && \
     apk update && apk upgrade && \
@@ -15,6 +15,6 @@ RUN chown -R app:app /home/app
 
 USER app
 
-EXPOSE 10001
+EXPOSE 10003
 
 CMD ["pm2", "start","processes.json","--no-daemon"]
