--- a/app3/dockerfile
+++ b/app3/dockerfile
@@ -9,7 +9,7 @@ RUN addgroup -S app && adduser -S -g app app && \
 
 WORKDIR /home/app
 
-COPY processes.json app.js /home/app/
+COPY processes.json app3.js /home/app/
 
 RUN chown -R app:app /home/app
 
