--- a/app1/dockerfile
+++ b/app1/dockerfile
@@ -4,7 +4,7 @@ RUN addgroup -S app && adduser -S -g app app && \
     apk update && apk upgrade && \
     apk add --no-cache build-base && \
     npm i -g pm2 && \
-    npm i express && \
+    npm i -g express && \
     rm -f /var/cache/apk/*
 
 WORKDIR /home/app
@@ -17,4 +17,4 @@ USER app
 
 EXPOSE 10001
 
-CMD ["pm2", "start","processes.json","--no-daemon"]
+CMD ["pm2-docker", "start","processes.json"]
