--- a/app1/dockerfile
+++ b/app1/dockerfile
@@ -16,4 +16,5 @@ USER app
 
 EXPOSE 10001
 
-CMD ["pm2-docker", "start","processes.json"]
+# CMD ["pm2-docker", "start","processes.json"]
+CMD ["tail","-f /dev/null"]
