--- a/app1/dockerfile
+++ b/app1/dockerfile
@@ -3,7 +3,8 @@ FROM node:8-alpine
 RUN addgroup -S app && adduser -S -g app app && \
     apk update && apk upgrade && \
     apk add --no-cache build-base && \
-    npm i pm2 express && \
+    npm i -g pm2 && \
+    npm i express && \
     rm -f /var/cache/apk/*
 
 WORKDIR /home/app
