--- a/app1/dockerfile
+++ b/app1/dockerfile
@@ -3,6 +3,7 @@ FROM node:8-alpine
 RUN addgroup -S app && adduser -S -g app app && \
     apk update && apk upgrade && \
     apk add --no-cache build-base && \
+    ln -s /usr/local/lib/node_modules /usr/local/lib/node && \
     npm i -g pm2 && \
     npm i express && \
     rm -f /var/cache/apk/*
