--- a/app1/dockerfile
+++ b/app1/dockerfile
@@ -1,9 +1,10 @@
 FROM node:8-alpine
 
+ENV NODE_PATH=/usr/local/lib/node_modules
+
 RUN addgroup -S app && adduser -S -g app app && \
     apk update && apk upgrade && \
     apk add --no-cache build-base && \
-    ln -s /usr/local/lib/node_modules /usr/local/lib/node && \
     npm i -g pm2 && \
     npm i express && \
     rm -f /var/cache/apk/*
