--- a/app1/dockerfile
+++ b/app1/dockerfile
@@ -6,16 +6,20 @@ RUN addgroup -S app && adduser -S -g app app && \
     apk update && apk upgrade && \
     apk add --no-cache build-base && \
     npm i -g pm2 && \
-    npm i express && \
     rm -f /var/cache/apk/*
 
 WORKDIR /home/app
 
 COPY processes.json app1.js /home/app/
 
+USER app
+
+RUN npm i pm2 express 
+
 RUN chown -R app:app /home/app
 
-USER app
+
+
 
 EXPOSE 10001
 
