Invalid email git status!

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     environment:
       VIRTUAL_HOST: www.adolfo-peixinho.eu.org, adolfo-peixinho.eu.org
       LETSENCRYPT_HOST: www.adolfo-peixinho.eu.org, adolfo-peixinho.eu.org
-      LETSENCRYPT_EMAIL: admin@vps.domain
+      LETSENCRYPT_EMAIL: admin@domain.com
   app2:
     build: app2
     container_name: app2
@@ -22,7 +22,7 @@ services:
     environment:
       VIRTUAL_HOST: www.peixe.eu.org, peixe.eu.org
       LETSENCRYPT_HOST: www.peixe.eu.org, peixe.eu.org
-      LETSENCRYPT_EMAIL: admin@vps.domain
+      LETSENCRYPT_EMAIL: admin@domain.com
   app3:
     build: app3
     container_name: app3
@@ -33,7 +33,7 @@ services:
     environment:
       VIRTUAL_HOST: www.hoho.eu.org, hoho.eu.org
       LETSENCRYPT_HOST: www.hoho.eu.org, hoho.eu.org
-      LETSENCRYPT_EMAIL: admin@vps.domain
+      LETSENCRYPT_EMAIL: admin@domain.com
 
 networks:
   default:
