--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       VIRTUAL_HOST: www.adolfo-peixinho.eu.org, adolfo-peixinho.eu.org
       LETSENCRYPT_HOST: www.adolfo-peixinho.eu.org, adolfo-peixinho.eu.org
       LETSENCRYPT_EMAIL: admin@domain.com
+      LETSENCRYPT_TEST: true
   app2:
     build: app2
     container_name: app2
@@ -23,6 +24,7 @@ services:
       VIRTUAL_HOST: www.peixe.eu.org, peixe.eu.org
       LETSENCRYPT_HOST: www.peixe.eu.org, peixe.eu.org
       LETSENCRYPT_EMAIL: admin@domain.com
+      LETSENCRYPT_TEST: true
   app3:
     build: app3
     container_name: app3
@@ -34,6 +36,7 @@ services:
       VIRTUAL_HOST: www.hoho.eu.org, hoho.eu.org
       LETSENCRYPT_HOST: www.hoho.eu.org, hoho.eu.org
       LETSENCRYPT_EMAIL: admin@domain.com
+      LETSENCRYPT_TEST: true
 
 networks:
   default:
