--- a/app1/dockerfile
+++ b/app1/dockerfile
@@ -5,8 +5,8 @@ FROM node:carbon-alpine
 # If using one liner breakpoint '\' you can't use previously defined
 # variables in posterior variables. Just define ENV per line
 ENV NODE_ENV=production
-# ENV NPM_CONFIG_PREFIX=/home/node/.npm-global
-# ENV PATH=${PATH}:${NPM_CONFIG_PREFIX}/bin
+ENV NPM_CONFIG_PREFIX=/home/node/.npm-global
+ENV PATH=${PATH}:${NPM_CONFIG_PREFIX}/bin
 
 # Following best practices at:
 # https://github.com/nodejs/docker-node/blob/master/docs/BestPractices.md
