--- a/app2/app2-stack.yml
+++ b/app2/app2-stack.yml
@@ -15,7 +15,7 @@ services:
       labels:
         - "traefik.enable=true"
         - "traefik.frontend.entryPoints=http,https"  
-        - "traefik.frontend.rule=Host:hoho.eu.org,www.hoho.eu.org;PathPrefixStrip:/app2"
+        - "traefik.frontend.rule=Host:hoho.eu.org,www.hoho.eu.org;PathStrip:/app2"
         - "traefik.backend=app2"
         - "traefik.backend.loadbalancer.method=drr"
         - "traefik.port=10012"
