--- a/app1/dockerfile
+++ b/app1/dockerfile
@@ -10,16 +10,17 @@ ENV NODE_ENV=production
 # update and upgrade, install required packages with no cache
 RUN apk update && apk upgrade && \
     # apk add --no-cache build-base git && \
-    apk -v cache clean
-    # rm -f /var/cache/apk/*
-# 
-# add variables to PATH
-# ENV PATH=${PATH}:"$(yarn global bin)"
+    rm -f /var/cache/apk/*
 
 # https://www.alpinelinux.org/posts/Docker-image-vulnerability-CVE-2019-5021.html
 # https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2019-5021
 # make sure root login is disabled
 RUN sed -i -e 's/^root::/root:!:/' /etc/shadow
+ 
+# add variables to PATH
+# ENV PATH="${PATH}:$(yarn global bin)"
+# ENV YARN_GLOBAL=/home/app/.yarn/bin
+# ENV PATH=${PATH}:${YARN_GLOBAL}
 
 # Following best practices at:
 # https://github.com/nodejs/docker-node/blob/master/docs/BestPractices.md
@@ -30,22 +31,17 @@ RUN addgroup app -S && adduser -S -g app app
 
 COPY pm2-conf.json app1.js public /home/app/site1/
 
-# RUN chown -R node:node /home/node
 RUN chown -R app:app /home/app
 
-# USER node
 USER app
 
-# WORKDIR /home/node
 WORKDIR /home/app/site1
 
-RUN yarn global add pm2 express helmet --no-lockfile --ignore-scripts && \ 
+RUN yarn add pm2 express helmet --no-lockfile --ignore-scripts && \ 
 yarn cache clean
-# RUN npm i -g pm2 --no-save --no-package-lock --ignore-scripts && \
-# npm i express helmet --no-save --no-package-lock --ignore-scripts 
 
 EXPOSE 10011
 
-CMD ["pm2-docker", "start", "pm2-conf.json"]
-# CMD ["node_modules/pm2/bin/pm2-docker", "start", "pm2-conf.json"]
+# CMD ["pm2-docker", "start", "pm2-conf.json"]
+CMD ["node_modules/pm2/bin/pm2-docker", "start", "pm2-conf.json"]
 # CMD ["tail","-f", "/dev/null"]
